# Ryo

./: .gitignore  CMakeLists.txt
src/: fileanalyzer.h  filemanager.cpp  filemanager.h  mainwindow.cpp  mainwindow.h
src/ui/: mainwindow.ui
tests/: filemanager_test.cpp
